# hysim

./: .gitignore  404.html  CNAME  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  scratchpad.py  setup.py
docs/: about.md  index.md  installation.md  licence.md
docs/user_guide/: configuring.md  mesh_prep.md  running.md
envs/: hyperspacesim_dev.yml  hysim_development_01.yml
example_case/: case_results_3.exr  case_settings.yml  mission_parameters.yml
example_case/sensors/: sensor.yml
hyperspacesim/: input_data.py  output_data.py  renderer.py  sim.py  test.py  test_script.py
hyperspacesim/data/: data_handling.py  data_list.json  data_paths.py  spd_reader.py
hyperspacesim/data/materials/: materials.json
hyperspacesim/data/spectra/: electroplated_gold_estimated.spd  film_vnir.spd  material_aluminium.spd
hyperspacesim/scene/: chaser_satellite.py  frame_transforms.py  simulator_environment.py  simulator_scene.py
hyperspacesim/sim/: builders.py  chaser.py  environment.py  model_part.py  scene_builder.py  scene_builders.py  sensors.py  spectra.py  spectral_film.py  target.py  utils.py
notebooks/: geometry_import_testing.ipynb  testing.ipynb
search/: search_index.json
site/installation/: index.html
site/licence/: index.html
site/print_page/: index.html
site/user_guide/configuring/: index.html
site/user_guide/mesh_prep/: index.html
src/example_case/: case_settings.yml  mission_parameters.yml  run.sh
src/example_case/sensors/: sensor.yml
src/hyperspacesim/: input_data.py  output_data.py  sim.py
src/hyperspacesim/cli/: entry.py
src/hyperspacesim/data/: data_handling.py  spd_reader.py
src/hyperspacesim/data/kernels/: meta_kernel.tm
src/hyperspacesim/data/materials/: materials.json
src/hyperspacesim/scene/: chaser_satellite.py  frame_transforms.py  simulator_environment.py  simulator_scene.py  spectra.py  target_satellite.py
src/hysim/: cli.py  input_data.py  output_data.py  sim.py
src/hysim/cli/: entry.py
src/hysim/data/: data_handling.py  spd_reader.py
src/hysim/data/earth_model/: ocean.spd  soil.spd
src/hysim/data/light_sources/: wehrli85.spd
src/hysim/data/materials/: Anodized_Unpainted_Al_6061.spd  DebrisSat_MLI_Kapton_Polyimide.spd  DebrisSat_UTJ_Solar_Cells.spd  GaAs_Ge_solar_cell.spd  au_eta.spd  au_k.spd  black_COPV.spd  black_aluminium.spd  black_paint.spd  blue_aluminium.spd  (+20 more)
src/hysim/scene/: chaser_satellite.py  frame_transforms.py  simulator_environment.py  simulator_scene.py  spectra.py  target_satellite.py
tests/: test_sensors.py
user_guide/running/: index.html
