[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
    "wheel"]
build-backend = "setuptools.build_meta"


[project]
# Project Information
name = "hysim" # Required
version = "0.1.0"
description = "Hyperspectral Space-to-Space Imaging Simulator"
# requires-python = ">=3.8"
readme = "README.md"
# licence = {file = "LICENCE.txt"}

classifiers=[
     "Development Status :: Pre-Alpha",
     # "Licence :: TBC",
]
dependencies = [
     "numpy>=1.23.5",
#     "mitsuba>=3.1.0",
     "PyYAML>=6.0",
     "spiceypy>=5.1.2",
     "imageio>=2.23.0",
]
# dynamic = ["dependencies"]


[project.scripts]  # Optional
hysim = "hysim.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.distutils.bdist_wheel]
universal = true

# [tool.setuptools.dynamic]
# dependencies = {file = ["requirements.txt"]}
